[gd_scene load_steps=9 format=3 uid="uid://dg5wdx5ugrjdy"]

[ext_resource type="Script" path="res://Scripts/Spells/spellProjectile.gd" id="1_g0f53"]
[ext_resource type="Texture2D" uid="uid://xh4b14gkejbh" path="res://Assets/Spells/large_projectile.png" id="1_jc6xl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_owatn"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_ooh88"]
resource_name = "fire"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LargeProjectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LargeProjectile:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(64, 0), Vector2(52, 0), Vector2(32, 0), Vector2(8, 0), Vector2(-26, 0), Vector2(-42, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LargeProjectile:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nmo2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LargeProjectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LargeProjectile:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LargeProjectile:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_josgx"]
resource_name = "fly"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LargeProjectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LargeProjectile:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-26, 0), Vector2(-42, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbxrm"]
_data = {
"RESET": SubResource("Animation_nmo2n"),
"fire": SubResource("Animation_ooh88"),
"fly": SubResource("Animation_josgx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0j7f5"]
radius = 4.12311

[node name="SpellProjectile" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_g0f53")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_owatn")
disabled = true

[node name="LargeProjectile" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -6)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_jc6xl")
offset = Vector2(64, 0)
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbxrm")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 70

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0j7f5")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
